<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingActivity">

    <TextView
        android:id="@+id/accountPageTitle"
        android:text="@string/manage_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/accountPageTitle"
        />

    <TextView
        android:id="@+id/internationalAddressHeading"
        android:text="@string/international_address_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        />

    <!--International Card View-->
    <androidx.cardview.widget.CardView
        android:id="@+id/internationalAddressCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/internationalAddressHeading"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/internationalStreetAddress"
            android:text="@string/international_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/internationalSuiteNumber"
            android:text="@string/suite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/internationalStreetAddress"
            />

            <TextView
            android:id="@+id/internationalCity"
            android:text="@string/international_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/internationalSuiteNumber"
            />
        <TextView
            android:id="@+id/internationalStateCountry"
            android:text="@string/international_state_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/internationalCity"
            />
        <TextView
            android:id="@+id/internationalPostalCode"
            android:text="@string/international_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/internationalStateCountry"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/internationalAddressCard"
        >
        <TextView
            android:id="@+id/localAddressHeading"
            android:text="@string/home_address_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/homeAddressAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_24"
            />
    </LinearLayout>


    <!--Navigation Bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:menu="@menu/nav_menu"/>




</androidx.constraintlayout.widget.ConstraintLayout>