<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="10dp"
        android:paddingVertical="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    <!--Welcome user text-->
    <TextView
        android:id="@+id/mainPageWelcome"
        android:text="Welcome Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="@dimen/pageTitle"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Track your package card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/trackPackageCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/brown_300"
        app:layout_constraintTop_toBottomOf="@id/mainPageWelcome"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">
    <TextView
        android:id="@+id/trackPackageCardTitle"
        android:text="Track your package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
        <TextView
            android:id="@+id/trackPackageCardInfo"
            android:text="Please enter your tracking number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="11sp"
            android:textColor="@color/gray_800"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:backgroundTint="#CEFFFFFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:hint="Tracking number ..."
            android:textColorHint="@color/gray_100"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trackParcelEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="#CEFFFFFF"
                />

            <Button
                android:id="@+id/trackParcelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:drawableLeft="@drawable/baseline_search_24"
                android:layout_gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--Current Parcels Label-->
    <LinearLayout
        android:id="@+id/currentParcelsLabelContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/trackPackageCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/currentParcelsLabel"
            android:text="@string/current_parcels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            />

        <TextView
            android:id="@+id/viewAllParcelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="1dp"
            android:text="@string/view_all"
            android:textColor="@color/green_500"
            android:textSize="13sp"
            android:gravity="end"
            android:textAlignment="viewEnd"
            />
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parcelRecyclerViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentParcelsLabelContainer"
        app:layout_constraintBottom_toTopOf="@+id/currentDeliveryLabelContainer"
        android:layout_marginVertical="1dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="2dp"
        android:paddingVertical="1dp"

        />

    <!--Current Deliveries Label-->
    <LinearLayout
        android:id="@+id/currentDeliveryLabelContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/parcelRecyclerViewMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/currentDeliveriesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/current_delivery"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            />
        <TextView
            android:id="@+id/viewAllDeliveriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/view_all"
            android:textColor="@color/green_500"
            android:textSize="13sp"
            android:gravity="end"
            android:textAlignment="viewEnd"
            />

    </LinearLayout>

            <TextView
                android:id="@+id/mainComingSoonText"
                android:text="Delivery Coming Soon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textSize="16sp"
                android:textColor="@color/red_650"
                android:textStyle="bold"
                android:gravity="center"
                />
        </LinearLayout>

    </ScrollView>

    <!--Bottom Navigation-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:menu="@menu/nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>